tests/error/empty_obj_data.gw
#! [contains] NullPtrException
class C
{
	var int i;
}

ref C c;
c.i;
